# Ai-Partner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
admin/: index.html
backend/: config.py  main.py
backend/agents/: knowledge_agent.py  memory_agent.py  orchestrator.py  perception_agent.py  persona_agent.py  response_agent.py  state.py  voice_agent.py
backend/api/: router.py
backend/api/routes/: admin.py  auth.py  chat.py  documents.py  gf_ws.py  girlfriend.py  health.py  knowledge.py
backend/core/: embeddings.py  llm.py  vector_store.py
backend/db/: database.py
backend/models/: __init__.py  character.py  chat.py  conversation.py  document.py  message.py  user.py
backend/services/: chat_persistence.py  chat_service.py  document_service.py  tts_service.py
backend/utils/: chunkers.py  file_parser.py  logger.py
file/: 产品手册.txt  常见问题FAQ.md  恋爱场景回复万能公式.md  撒娇型女友话术大全.md  甜美型与御姐型女友风格对比.md  高段位聊天技巧与情绪价值.md
mini-program/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
mini-program/pages/chat/: chat.js  chat.json  chat.wxml  chat.wxss
mini-program/pages/documents/: documents.js  documents.json  documents.wxml  documents.wxss
mini-program/pages/index/: index.js  index.json  index.wxml  index.wxss
mini-program/utils/: api.js  ws.js
sql/: init.sql  seed.sql
