[project]
name = "multi-agent-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiomysql>=0.3.2",
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
